--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#location">Location</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
@@ -71,20 +71,38 @@
     <div class="row text-center">
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
-          <p class="pt-3 text-left text-muted">Hi I am Raymond,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Raymond</h3>
-          <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          <p class="pt-3 text-left text-muted">Hi, I am saravana. we meet on November 2021 when my life's second chapter started. I can honestly say I've never felt this way before. You Make me feel so happy,
+            so whole,so real.I can't imagine life without you. we're so lucky to found each other. Good time or bad times, I'll always be there to Cheer you up, or just to hold your hand and say I know how you feel and I care for you. Grow old alone with me, the best is yet to be. will you spent the rest of your life with me....</p>
+          <h3 class="h2 ww-title">Saravana</h3>
+          <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
         </div>
       </div>
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/bride.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
-          <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-          <h3 class="h2 ww-title">Susan</h3>
-          <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
+          <p class="pt-3 text-left text-muted">Hi, I am Chandra. as days goes by my feelings for you gets stronger. To be in your arms,
+            I can't wait any longer. look into my eyes and you'll see its true. Set a place for me in your heart not in your mind, for the mind easily forgets but the heart always remember. Loser's make promises they often breaks. winners make Commitments they always keep. I commit to love you forever...
+            </p>
+          <h3 class="h2 ww-title">Chandra</h3>
+          <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
         </div>
       </div>
     </div>
   </div>
+</div>
+<div class="ww-section bg-light" id="location">
+  <div class="venue">
+    <h3 class="recption">Reception on 31st of May</h3>
+    <h3 class="recption1">6.30pm Onwards</h3>
+    <h3 class="muhurtam">Muhurtham- 1st of June </h3>
+    <h3 class="muhurtam1">6 to 7.30 am</h3>
+    <h3 class="venue1">Venue-Thiruvalluvar Mandapam</h3>
+    <h3 class="venue1">Karthikeyan salai,Periyar-Nagar</h3>
+  </div>
+  <div class="location-btn">
+    <button class="button_slide slide_right"onclick="window.location.href='https://www.google.com/maps/place/Thiruvalluvar+Kalyana+Mandapam/@13.1157704,80.2365607,15.83z/data=!4m5!3m4!1s0x3a52644e28dece79:0x385f5ab3b825a412!8m2!3d13.1141346!4d80.2243708';">Click here for location...!!</button>
+  </div>
+  
+
 </div>
 <!-- <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
