--- a/index.html
+++ b/index.html
@@ -65,21 +65,23 @@
 <div class="ww-section" id="couple">
   <div class="container">
     <h2 class="groom h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+    <h3 class="h2 ww-title"style="text-align: center;margin-top: 10px;margin-bottom: -0.5rem;">Saravana</h3>
     <div class="row text-center">
       <div class="col-md-6">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
           <p class="pt-3 text-left text-muted">Hi, I am saravana. we meet on November 2021 when my life's second chapter started. I can honestly say I've never felt this way before. You Make me feel so happy,
             so whole,so real.I can't imagine life without you. we're so lucky to found each other. Good time or bad times, I'll always be there to Cheer you up, or just to hold your hand and say I know how you feel and I care for you. Grow old alone with me, the best is yet to be. will you spent the rest of your life with me....</p>
-          <h3 class="h2 ww-title">Saravana</h3>
+          <!-- <h3 class="h2 ww-title">Saravana</h3> -->
           <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
         </div>
       </div>
       <div class="col-md-6">
+        <h3 class="h2 ww-title">Chandra</h3>
         <div class="mt-3"><img class="img-fluid" src="images/bride.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
           <p class="pt-3 text-left text-muted">Hi, I am Chandra. as days goes by my feelings for you gets stronger. To be in your arms,
             I can't wait any longer. look into my eyes and you'll see its true. Set a place for me in your heart not in your mind, for the mind easily forgets but the heart always remember. Loser's make promises they often breaks. winners make Commitments they always keep. I commit to love you forever...
             </p>
-          <h3 class="h2 ww-title">Chandra</h3>
+          <!-- <h3 class="h2 ww-title">Chandra</h3> -->
           <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
         </div>
       </div>
